--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -100,8 +100,7 @@
                                 <i class="bi bi-x" data-bs-dismiss="offcanvas" aria-label="Close"></i>
                             </div>
                             <div class="offcanvas-body">
-                                <div class="
-                                ">
+                                <div class="mobile-menu-items">
                                     <% commonData.menuItems.forEach((item, index) => { %>
                                         <div class="accordion" id="accordionExample<%= index %>">
                                             <div class="accordion-item custom-accordion-item">
