--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,9 +6,8 @@
     <% courseData.banner.forEach(image => { %>
  
     <div class="item">
-        <img  height="200" style="object-fit: contain;"  src="<%= image.imgSrc %>" class="d-block w-100 object-fit-cover d-none d-md-block" alt="...">
+        <img  height="250" style="object-fit: cover;"  src="<%= image.imgSrc %>" class="d-block w-100 object-fit-cover d-none d-md-block" alt="...">
         <img height="200" style="object-fit: contain;"  src="<%= image.imgSrc2 %>" class="d-block w-100 object-fit-cover d-block d-md-none" alt="...">
-        <img height="250" style="object-fit: cover;"  src="<%= image.imgSrc %>" class="d-block w-100 object-fit-cover" alt="...">
 
     </div>
     <% }) %>
