--- a/public/scss/layout/_header.scss
+++ b/public/scss/layout/_header.scss
@@ -274,38 +274,54 @@ display: flex;
     
       // Mobile menu items container styles
       .mobile-menu-items {
-        padding: 20px 10px;
-        margin-left: 10px;
+     border: 0;
+     box-shadow: 0;
     
         // Custom accordion item styles
         .custom-accordion-item {
           // Custom accordion header styles
+          margin-bottom: 20px;
+          padding: 0;
+          border: 0;
+          border-bottom: 1px solid rgba(0, 0, 0, 0.315);
           .custom-accordion-header {
             button {
               box-shadow: none;
+              padding: 5px 10px;
+              background-color: $text-light;
           span{
             font-size: 1rem;
             font-weight: $bold;
             letter-spacing: 1px;
             // background-color: green;
           }
+            &:focus-within{
+              background-color: #e7f1ff;;
+            }
               
             }
           }
-    
+        .show{
+          background-color: #e7f1ff;
+        }
           // Custom accordion body styles
           .custom-accordion-body {
             box-shadow: none;
             margin: 0;
             padding: 0;
+            // background-color: #e7f1ff;
+            
     
             // Styles for the first level menu item
             .m-menu-item-1 {
-             padding: 5px;
-             margin-left: 10px;
+             margin-left: 20px;
+             margin-bottom: 10px;
               a {
+                display: block;
                 font-size: 1rem;
                 color: $text-dark;
+                padding: 10px 0px;
+        
               }
               span{
                 font-weight: $bold;
@@ -315,6 +331,12 @@ display: flex;
               // Styles for the second level menu item
               .m-menu-item-2 {
                 margin-left: 10px;
+                a{
+                  font-size: 1rem;
+                  color: $text-dark;
+                  padding: 10px 0px;
+                  display: block;
+                }
               }
             }
           }
