--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -66,8 +66,8 @@
                             <li><a href="/courseview/IIT-JEE-2024-Offline">IIT JEE</a></li>
                             <li><a href="/courseview/NEET-2024-Offline">NEET</a></li>
                             <li><a href="/courseview/UP-Police-2024-Offline">UP POLICE</a></li>
-                            <li><a href="/courseview/NEET-2024-Offline">CLASS 12</a></li>
-                            <li><a href="/courseview/NEET-2024-Offline">CLASS 11</a></li>
+                            <li><a href="/courseview/science-stream-Offline">SCIENCE STREAM</a></li>
+                            <li><a href="/courseview/commerce-stream-Offline">COMMERCE STREAM</a></li>
                       
                         </ul>
                     </div>
