--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -45,16 +45,15 @@
                             <a href="index.html"><img src="/assets/img/1.logo/ea-logo.png" class="img-fluid" alt="logo"></a>
                             <p>E. Academy</p>
                         </div>
-                        <!-- <div class="footer-text">
-                            <p>Lorem ipsum dolor sit amet, consec tetur adipisicing elit, sed do eiusmod tempor incididuntut consec tetur adipisicing
-                            elit,Lorem ipsum dolor sit amet.</p>
-                        </div> -->
-                        <!-- <div class="footer-social-icon">
+                        <div class="footer-text">
+                            <p>Maximize your learning experience by choosing Education Academy committed to providing affordable and effective education.</p>
+                        </div>
+                        <div class="footer-social-icon">
                             <span>Follow us</span>
                             <a href="#"><i class="fab fa-facebook-f facebook-bg p-3"></i></a>
                             <a href="#"><i class="fab fa-twitter twitter-bg p-3"></i></a>
                             <a href="#"><i class="fab fa-google-plus-g google-bg p-3"></i></a>
-                        </div> -->
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-3">
