--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -57,7 +57,7 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="footer-widget">
+                    <div class="footer-widget mt-4 mt-md-0">
                         <div class="footer-widget-heading">
                             <h3>Our Courses</h3>
                         </div>
@@ -71,8 +71,8 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="footer-widget">
+                <div class="col-md-3 ">
+                    <div class="footer-widget mt-4 mt-md-0">
                         <div class="footer-widget-heading">
                             <h3>Quick Links</h3>
                         </div>
