--- a/views/home.ejs
+++ b/views/home.ejs
@@ -155,7 +155,7 @@
                             </div>
                             <hr>
                             <div class="course-item-button">
-                                <a href="/courseview/<%= course.id %>"> <button
+                                <a href="/courseview/<%= course.onlineCourse.links.explore %>"> <button
                                         class="exploreNow">Explore</button></a>
                                 <a href="<%= course.courseListPage.links.buyNow %>"> <button class="buyNow">Buy
                                         Now</button></a>
