--- a/views/courseView.ejs
+++ b/views/courseView.ejs
@@ -189,7 +189,7 @@
                                     <li><%= courseViewData.buyCard.prices.regularPrice %></li>
                                     <li><%= courseViewData.buyCard.prices.discountPercentage %></li>
                                 </ul>
-                                <a href="<%= courseViewData.buyCard.button.link %>"><button class="secondary-button"><%= courseViewData.buyCard.button.buttonText %></button></a>
+                                <a href="/order/<%= courseViewData.courseId  %>"><button class="secondary-button"><%= courseViewData.buyCard.button.buttonText %></button></a>
                             </div>
                         </div>
                     </div>
