--- a/views/home.ejs
+++ b/views/home.ejs
@@ -157,7 +157,7 @@
                             <div class="course-item-button">
                                 <a href="/courseview/<%= course.onlineCourse.links.explore %>"> <button
                                         class="exploreNow">Explore</button></a>
-                                <a href="<%= course.courseListPage.links.buyNow %>"> <button class="buyNow">Buy
+                                <a href="/order/<%= course.id %>"> <button class="buyNow">Buy
                                         Now</button></a>
 
                             </div>
